# DNSValidator

./: .dockerignore  .gitignore  CustomLogger.py  DNSValidator.py  Dockerfile  README.md  prototyping.ipynb  requirements.txt  setup.cfg  setup.py
.github/workflows/: push-to-docker.yml
dnsvalidator/: CustomLogger.py  DNSValidator.py
src/DNSValidator/: __init__.py  __main__.py  banner.py  environment.py  functions.py
src/DNSValidator/CustomLogger/: CustomFormatter.py  CustomLogger.py  __init__.py  colors.py  emoji.py
