[metadata]
name = DNSValidator
version = attr: DNSValidator.__version__
description = My package description
long_description = file: README.md
author = Maaz Basar
author_email = maazbasar@icloud.com
license = GNU General Public License v3.0
license_files = LICENSE.rst
classifiers =
    Environment :: Console
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
python_requires = >=3.9
install_requires = file: requirements.txt
package_dir =
    =src
packages = find_namespace:
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dnsvalidator = DNSValidator.__main__:main
